Api-Rest-ITL/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tu-aplicacion-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.mgalan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tu-aplicacion-service
            port:
              number: 80
